<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageActivity">

    <FrameLayout
        android:id="@+id/frameProfile"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearColumnarrowleft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginBottom="@dimen/_60pxv"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:id="@+id/linearRowarrowleft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageArrowleft"
                        android:layout_width="@dimen/_16pxh"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_arrowleft" />

                    <TextView
                        android:id="@+id/txtCreteNewAccou"
                        style="@style/txtLoraromanbold19"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_105pxh"
                        android:layout_weight="0.79"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="Profile"
                        tools:text="@string/lbl_profile" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/linearGrupuj14"
                style="@style/groupStyleamber_100cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_31pxv"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:id="@+id/viewEllipseFive"
                    android:layout_width="@dimen/_112pxh"
                    android:layout_height="@dimen/_117pxh"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_89pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_marginEnd="@dimen/_89pxh"
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_58_5" />

                <TextView
                    android:id="@+id/txtBycreatingacc"
                    style="@style/txtArialboldmt13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_89pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_89pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="Full name"
                    tools:text="@string/lbl_adam_richmond" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEditProfile"
                    style="@style/btnSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_89pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_89pxh"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_9pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingBottom="@dimen/_9pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_edit_profile"
                    android:textAllCaps="false"
                    tools:text="@string/lbl_edit_profile" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowhome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageHome"
                    android:layout_width="@dimen/_14pxh"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_home" />

                <TextView
                    android:id="@+id/txtBycreatingaccOne"
                    style="@style/txtArialboldmt13"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.71"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="Home"
                    tools:text="@string/lbl_home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_47pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageSearch"
                    android:layout_width="@dimen/_14pxh"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_search"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_search" />

                <TextView
                    android:id="@+id/txtBycreatingaccTwo"
                    style="@style/txtArialboldmt13"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.75"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="Gallery"
                    tools:text="@string/lbl_gallery" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagePlay"
                    android:layout_width="@dimen/_14pxh"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_play"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_play" />

                <TextView
                    android:id="@+id/txtBycreatingaccThree"
                    style="@style/txtArialboldmt13"
                    android:layout_width="59dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.74"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="Video"
                    tools:text="@string/lbl_videos" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowcall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageCall"
                    android:layout_width="@dimen/_15pxh"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_call"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_call" />

                <TextView
                    android:id="@+id/txtBycreatingaccFour"
                    style="@style/txtArialboldmt13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.82"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="Contact Us"
                    tools:text="@string/lbl_contact_us" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowsettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageSettings"
                    android:layout_width="@dimen/_13pxh"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_settings"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_settings" />

                <TextView
                    android:id="@+id/txtBycreatingaccFive"
                    style="@style/txtArialboldmt13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.77"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="Log out"
                    tools:text="@string/lbl_logout" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</RelativeLayout>